--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 opencv-python-headless>=4.5
 numpy
 pyzbar
-picamera[array]
+picamera2
 sshkeyboard
 adafruit-circuitpython-vl53l1x
 adafruit-circuitpython-mpu6050
